terraform/k8-manifests/frontend/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: workshop
  creationTimestamp: null
  labels:
    app: my-notes
  name: front-svc
spec:
  ports:
  - name: 4000-4000
    port: 4000
    protocol: TCP
    targetPort: 4000
  selector:
    app: front-svc
  type: ClusterIP
status:
  loadBalancer: {}
