terraform/k8-manifests/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mainlb
  namespace: workshop
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
    - host: 
      http:
        paths:
          - path: /ok
            pathType: Prefix
            backend:
              service:
                name: mongodb-svc
                port:
                  number: 27017
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-svc
                port:
                  number: 4000
